--- a/src/components/Teacher/Assignment/Grading.css
+++ b/src/components/Teacher/Assignment/Grading.css
@@ -35,3 +35,13 @@
     height: 200px;
     text-align: center;
 }
+
+.ant-radio-button-wrapper {
+    border-radius: 20px !important;
+}
+
+#tool-container {
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+}
