--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -77,5 +77,25 @@
 } */
 
 button {
-    border-radius: 25px !important;
+  border-radius: 25px !important;
+}
+
+.ant-card-head {
+  background-color: rgba(128, 172, 233, 1);
+  display: block;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
+  color: white;
+  text-align: center;
+}
+
+.ant-card-grid {
+  box-shadow: 0px 0px !important;
+}
+
+.course-card-content {
+  font-size: 15px;
+  font-style: italic;
+  font-weight: bold;
 }
