--- a/src/containers/Login/OtherLogin.css
+++ b/src/containers/Login/OtherLogin.css
@@ -120,8 +120,8 @@ input[type="reset"]:active {
   transform: scale(0.95);
 }
 
-input[type="text"],
-input[type="password"] {
+.login-form>input[type="text"],
+.login-form>input[type="password"] {
   background-color: #f6f6f6;
   border: none;
   color: #0d0d0d;
@@ -142,8 +142,8 @@ input[type="password"] {
   border-radius: 5px 5px 5px 5px;
 }
 
-input[type="text"]:focus,
-input[type="password"]:focus {
+.login-form>input[type="text"]:focus,
+.login-form>input[type="password"]:focus {
   background-color: #fff;
   border-bottom: 2px solid #5fbae9;
 }
