--- a/src/containers/Register/OtherRegister.css
+++ b/src/containers/Register/OtherRegister.css
@@ -120,7 +120,7 @@
     transform: scale(0.95);
   }
   
-  input[type="text"],
+  /* input[type="text"],
   input[type="password"] {
     background-color: #f6f6f6;
     border: none;
@@ -140,13 +140,13 @@
     transition: all 0.5s ease-in-out;
     -webkit-border-radius: 5px 5px 5px 5px;
     border-radius: 5px 5px 5px 5px;
-  }
+  } */
   
-  input[type="text"]:focus,
+  /* input[type="text"]:focus,
   input[type="password"]:focus {
     background-color: #fff;
     border-bottom: 2px solid #5fbae9;
-  }
+  } */
   
   input[type="text"]:placeholder,
   input[type="password"]:placeholder {
