--- a/src/components/Student/Leaderboard/Leaderboard.css
+++ b/src/components/Student/Leaderboard/Leaderboard.css
@@ -93,6 +93,10 @@
   width: 100%;
 }
 
+.leader {
+    cursor: pointer;
+}
+
 .leaderboard-score-card .leader {
   display: flex;
   justify-content: space-evenly;
